--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<title>notices</title>
 	<link rel="icon" type="image/ico" href="./favicon.ico"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<link rel="stylesheet" href="main.css">
 </head>
 <body>
 
